# memvectordb-python-sdk

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  sentence-transformers-example.ipynb
.github/workflows/: ci.yaml  distribute-package.yaml  linux_test.yaml  macos_test.yaml  ruff_check.yaml  test.yaml  tests.yaml  windows_test.yaml
DOCS/: index.md  requests_docs.md
blog/: index.html
examples/: sentence-transformers-example.ipynb
memvectordb/: collection.py  memvectordb_openai.py  sentencetransformers_example.ipynb  vectorstore.py
memvectordb-python/: collection.py
requests_docs/: index.html
tests/: memvectordb_openai_test.py  memvectordb_test.py  sentence_transformers_test.py
