[tool.poetry]
name = "memvectordb-python"
version = "0.0.3"
description = "memvectordb python client."
authors = ["Kevin Kibe <keviinkibe@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/KevKibe/memvectordb-python-client"

packages = [
    { include = "memvectordb" },
]

[tool.poetry.dependencies]
requests = "2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
