[tool.poetry]
name = "memvectordb-python"
version = "0.0.6"
description = "memvectordb python client."
authors = ["Kevin Kibe <keviinkibe@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/KevKibe/memvectordb-python-client"

packages = [
    { include = "memvectordb" },
]

[tool.poetry.dependencies]
requests = "2.31.0"
openai="1.30.5"
langchain_community="0.0.38"
pypdf="4.2.0"
langchain-text-splitters="0.0.2"
python-dotenv="1.0.1"
sentence_transformers="3.0.1"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
